# satellite-data-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: data_cleaner.py  data_loader.py  main.py
src/tests/: conftest.py  test_data_cleaner.py  test_data_loader.py
